2011-05-31  Werner Koch  <wk@g10code.com>

	* pubkey.c (mgf1): Optimize by using gcry_md_reset.  Re-implement
	for easier readability.
	(oaep_encode): Add more comments and restructure to match the
	description in RFC-3447.

	* pubkey.c (pkcs1_encode_for_signature, oaep_decode): Change
	return value from one MPI to a buffer.
	(gcry_pk_decrypt): Adjust for this change.

2011-05-30  Werner Koch  <wk@g10code.com>

	* pubkey.c (pkcs1_decode_for_encryption): Change handling of
	leading zero byte.

2011-05-27  Daiki Ueno  <ueno@unixuser.org>

	* pubkey.c (gcry_pk_decrypt): Fix double-free when un-padding
	invalid data.  Thanks to Tom Ritter.

2011-05-23  Daiki Ueno  <ueno@unixuser.org>

	* pubkey.c (pkcs1_decode_for_encryption, oaep_decode): Fix memleak
	when gcry_mpi_print fails.

2011-05-18  Daiki Ueno  <ueno@unixuser.org>

	* pubkey.c (sexp_data_to_mpi): Factor some code out to ...
	(pkcs1_encode_for_encryption): .. new,
	(pkcs1_encode_for_signature): .. new.
	(pkcs1_decode_for_encryption): New.
	(gcry_pk_decrypt): Do un-padding for PKCS#1 as well as OAEP.
	(sexp_to_enc): Abolish "unpad" flag, which is not necessary since
	we can do un-padding implicitly when "pkcs1" or "oaep" is given.

2011-05-11  Werner Koch  <wk@g10code.com>

	* pubkey.c (sexp_to_enc, sexp_data_to_mpi): Set LABEL to NULL
	after free.
	(sexp_to_enc, sexp_data_to_mpi): Do not allow multiple encoding
	flags.
	(oaep_encode, oaep_decode, sexp_to_key, sexp_to_sig)
	(sexp_to_enc, sexp_data_to_mpi, gcry_pk_encrypt, gcry_pk_sign)
	(gcry_pk_genkey, _gcry_pk_get_elements): Replace access to ERRNO
	by gpg_err_code_from_syserror.

2011-05-11  Daiki Ueno  <ueno@unixuser.org>

	* pubkey.c (sexp_data_to_mpi): Factor some code out to ...
	(get_hash_algo): .. new.
	(mgf1, oaep_encode, oaep_decode): New.
	(sexp_to_enc): Add arg CTX.  Remove arg RET_WANT_PKCS1.  Support
	OAEP.
	(sexp_data_to_mpi): Add arg CTX.  Support OAEP.
	(gcry_pk_encrypt): Pass a CTX to sexp_data_to_mpi.